--- a/estilos.css
+++ b/estilos.css
@@ -9,6 +9,11 @@ h1{
     text-align: center;
 }
 
+h2{
+    color: green;
+    text-align: center;
+}
+
 h3{
     color:red;
     text-decoration-line: underline;
@@ -18,7 +23,7 @@ h4{
     text-align: center;
 }
 
-p{
+.texto{
     background-color: lightcoral;
     background-size: inherit;
     width:fit-content;
@@ -31,9 +36,5 @@ li{
 div{
     display: inline-block;
     background-color: khaki;
-    text-align: center;
-}
-
-#edad{
     text-align: center;
 }
