--- a/estilos.css
+++ b/estilos.css
@@ -1,40 +1,43 @@
 body{
-    background-color: lightblue;
-    font-family: cursive;
-}
-
-h1{
-    background-color: grey;
-    color: white;
-    text-align: center;
-}
-
-h2{
-    color: green;
-    text-align: center;
-}
-
-h3{
-    color:red;
-    text-decoration-line: underline;
-}
-
-h4{
-    text-align: center;
-}
-
-.texto{
-    background-color: lightcoral;
-    background-size: inherit;
-    width:fit-content;
-}
-
-li{
-    font-style: oblique;
+    background: #f0aaaa;
+    background: radial-gradient(circle farthest-side at top center, #f0aaaa 10%, #00f0ff 80%);
 }
 
 div{
-    display: inline-block;
-    background-color: khaki;
+    padding: 0 20px;
+}
+.caja1{
+    background-color: yellow;
     text-align: center;
+    width:fit-content;
+    border-radius: 40px 40px 40px 40px;
+}
+.caja2{
+    display: flex;
+    background-color: yellow;
+    width:fit-content;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 40px 40px 40px 40px;
+    border: 5px dashed #ff6550;
+    box-shadow: 0px 0px 26px -3px rgba(0,0,0,0.75);
+}
+
+.caja3{
+    display: flex;
+    background-color: yellow;
+    width:fit-content;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 40px 40px 40px 40px;
+    border: 5px double #ff6550;
+    box-shadow: 0px 0px 26px -3px rgba(0,0,0,0.75);
+}
+
+h2{
+    text-decoration-line: underline;
+    font-family: 'Permanent Marker', cursive;
 }
