--- a/estilos.css
+++ b/estilos.css
@@ -1,43 +1,52 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
 body{
-    background: #f0aaaa;
-    background: radial-gradient(circle farthest-side at top center, #f0aaaa 10%, #00f0ff 80%);
-}
-
-div{
-    padding: 0 20px;
-}
-.caja1{
-    background-color: yellow;
-    text-align: center;
-    width:fit-content;
-    border-radius: 40px 40px 40px 40px;
-}
-.caja2{
     display: flex;
-    background-color: yellow;
-    width:fit-content;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 40px 40px 40px 40px;
-    border: 5px dashed #ff6550;
-    box-shadow: 0px 0px 26px -3px rgba(0,0,0,0.75);
 }
-
-.caja3{
+.rojo{
+    background-color: red;
+    height: 100px;
+    width: 100px; 
+    color: white;
+}
+.azul{
+    background-color: blue;
+    height: 100px;
+    width: 100px;
+    color: white;
+}
+.verde{
+    background-color: green;
+    height: 100px;
+    width: 100px;
+    color: white; 
+}
+.contenedor1{
+    margin-top: 30px;
+    border: 1px solid black;
+    height: 300px;
+    width: 300px;
     display: flex;
-    background-color: yellow;
-    width:fit-content;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    border-radius: 40px 40px 40px 40px;
-    border: 5px double #ff6550;
-    box-shadow: 0px 0px 26px -3px rgba(0,0,0,0.75);
+    flex-direction: column;
+    align-items: flex-end;
 }
-
-h2{
-    text-decoration-line: underline;
-    font-family: 'Permanent Marker', cursive;
+.contenedor2{
+    margin-top: 30px;
+    border: 1px solid black;
+    height: 300px;
+    width: 300px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items:center;
+}
+.contenedor3{
+    margin-top: 30px;
+    width: 100%;
+    border: 1px solid black;
+    display: flex;
+    justify-content:space-between;
 }
