--- a/estilos.css
+++ b/estilos.css
@@ -12,18 +12,27 @@ body{
     height: 100px;
     width: 100px; 
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .azul{
     background-color: blue;
     height: 100px;
     width: 100px;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .verde{
     background-color: green;
     height: 100px;
     width: 100px;
     color: white; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .contenedor1{
     margin-top: 30px;
