--- a/estilos.css
+++ b/estilos.css
@@ -1,61 +1,80 @@
-*{
-    padding: 0px;
-    margin: 0px;
-}
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.rojo{
-    background-color: red;
-    height: 100px;
-    width: 100px; 
-    color: white;
+div{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 1px;
+    margin-right: 1px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.azul{
-    background-color: blue;
-    height: 100px;
-    width: 100px;
-    color: white;
+
+header{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    height: 150px;
 }
-.verde{
-    background-color: green;
-    height: 100px;
-    width: 100px;
-    color: white; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.hc1, .hc2{
+    background-color: lightgreen;
+    width: 50%;
+    height: 100%;
 }
-.contenedor1{
-    margin-top: 30px;
-    border: 1px solid black;
+
+section{
     height: 300px;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-.contenedor2{
-    margin-top: 30px;
-    border: 1px solid black;
-    height: 300px;
-    width: 300px;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items:center;
+.sc1{
+    background-color: pink;
+    width: 100%;
+    height: 100%;
 }
-.contenedor3{
-    margin-top: 30px;
-    width: 94%;
-    border: 1px solid black;
+footer{
     display: flex;
-    justify-content:space-between;
+    flex-direction: row;
+    height: 100px;
+}
+.fc1,.fc2,.fc3{
+    background-color: lightskyblue;
+    width: 33.33%;
+    height: 100px;
+}
+
+@media screen and (max-width: 800px) {
+
+    header{
+        display: flex;
+        flex-direction: column;
+        height: 150px;
+    }
+    .hc1, .hc2{
+        background-color: lime;
+        width: 100%;
+        height: 100%;
+    }
+    
+    section{
+        height: 300px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    .sc1{
+        background-color: red;
+        width: 100%;
+        height: 100%;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+        height: 100px;
+    }
+    .fc1,.fc2,.fc3{
+        background-color: blue;
+        width: 100%;
+        height: 100px;
+    }
+    p::before{
+        content: "Nuevo! ";
+        color: white;
+    }
 }
